--- a/docs/references/common_parameters.dita
+++ b/docs/references/common_parameters.dita
@@ -31,30 +31,52 @@
           B.</b> <i>Title of second appendix</i>, etc.</p></stentry>
         </strow>
 
-      <strow>
-        <stentry
+        <strow>
+          <stentry
           id="cause-number-format"><tt>cause-number-format</tt><indexterm>cause-number-format,
-            parameter</indexterm></stentry>
-        
-        <stentry><p>Allowed values are: <tt>'I'</tt>, <tt>'i'</tt>,
+          parameter</indexterm></stentry>
+
+          <stentry><p>Allowed values are: <tt>'I'</tt>, <tt>'i'</tt>,
           <tt>'A'</tt>, <tt>'a'</tt>, <tt>'1'</tt>.</p><p>Default value:
-            <tt>'A'</tt>.</p></stentry>
-        
-        <stentry><p>In a <xmlelement>troubleshooting</xmlelement> topic,
+          <tt>'A'</tt>.</p></stentry>
+
+          <stentry><p>In a <xmlelement>troubleshooting</xmlelement> topic,
           multiple <xmlelement>remedy</xmlelement> elements having no title
           are given numbers formatted using this format.</p></stentry>
-      </strow>
-      
+        </strow>
+
         <strow>
           <stentry id="center"><tt>center</tt><indexterm>center,
           parameter</indexterm></stentry>
 
           <stentry><p>List of element names separated by
-          whitespace.</p><p>Example: <tt>'fig simpletable
+          whitespace.</p><p>Example: <tt>'fig equation-figure simpletable
           table'</tt>.</p><p>Default value: <tt>''</tt>.</p></stentry>
 
           <stentry><p>Specifies which elements are to be centered horizontally
           on the page.</p></stentry>
+        </strow>
+
+        <strow>
+          <stentry
+          id="equation-number-after"><tt>equation-number-after</tt><indexterm>equation-number-after,
+          parameter</indexterm></stentry>
+
+          <stentry><p>String.</p><p>Default value: <tt>')'</tt>.</p></stentry>
+
+          <stentry><p>Text added after the contents of a
+          <xmlelement>equation-number</xmlelement> element.</p></stentry>
+        </strow>
+
+        <strow>
+          <stentry
+          id="equation-number-before"><tt>equation-number-before</tt><indexterm>equation-number-before,
+          parameter</indexterm></stentry>
+
+          <stentry><p>String.</p><p>Default value: <tt>'('</tt>.</p></stentry>
+
+          <stentry><p>Text added before the contents of a
+          <xmlelement>equation-number</xmlelement> element.</p></stentry>
         </strow>
 
         <strow>
@@ -66,36 +88,18 @@
           <tt>'backmatter'</tt>, <tt>'both'</tt>,
           <tt>'none'</tt>.</p><p>Default value: <tt>'none'</tt>.</p></stentry>
 
-          <stentry><p>Allows to add <tt>frontmatter</tt> and
-          <tt>backmatter</tt> <tt>topicref</tt>s to the <b>Table of
-          Contents</b> (TOC) of a document.</p><p>Note that the <tt>toc</tt>,
-          <tt>navtitle</tt>, <tt>locktitle</tt>, etc, attributes are applied
-          normally to <tt>frontmatter</tt> and <tt>backmatter</tt>
-          <tt>topicref</tt>s when an extended TOC is generated.</p></stentry>
+          <stentry><p>Allows to add <xmlelement>frontmatter</xmlelement> and
+          <xmlelement>backmatter</xmlelement>
+          <xmlelement>topicref</xmlelement>s to the <b>Table of Contents</b>
+          (TOC) of a document.</p><p>Note that the <xmlatt>toc</xmlatt>,
+          <xmlatt>navtitle</xmlatt>, <xmlatt>locktitle</xmlatt>, etc,
+          attributes are applied normally to
+          <xmlelement>frontmatter</xmlelement> and
+          <xmlelement>backmatter</xmlelement>
+          <xmlelement>topicref</xmlelement>s when an extended TOC is
+          generated.</p></stentry>
         </strow>
 
-      <strow>
-        <stentry
-          id="equation-number-after"><tt>equation-number-after</tt><indexterm>equation-number-after,
-            parameter</indexterm></stentry>
-        
-        <stentry><p>String.</p><p>Default value: <tt>')'</tt>.</p></stentry>
-        
-        <stentry><p>Text added after the contents of a
-          <xmlelement>equation-number</xmlelement> element.</p></stentry>
-      </strow>
-      
-      <strow>
-        <stentry
-          id="equation-number-before"><tt>equation-number-before</tt><indexterm>equation-number-before,
-            parameter</indexterm></stentry>
-        
-        <stentry><p>String.</p><p>Default value: <tt>'('</tt>.</p></stentry>
-        
-        <stentry><p>Text added before the contents of a
-          <xmlelement>equation-number</xmlelement> element.</p></stentry>
-      </strow>
-      
         <strow>
           <stentry
           id="external-resource-base"><tt>external-resource-base</tt><indexterm>external-resource-base,
@@ -108,32 +112,35 @@
           format</indexterm>, <tt>''</tt> for all the other output
           formats.</p></stentry>
 
-          <stentry><p>Specifies how to resolve <tt>xref</tt> or <tt>link</tt>
-          elements having an <i>external</i> <tt>scope</tt> attribute and a
-          <i>relative</i> <tt>href</tt> attribute. Example of such
-          <tt>xref</tt> elements: <tt>&lt;xref scope="external" format="java"
+          <stentry><p>Specifies how to resolve <xmlelement>xref</xmlelement>
+          or <xmlelement>link</xmlelement> elements having an <i>external</i>
+          <xmlatt>scope</xmlatt> attribute and a <i>relative</i>
+          <xmlatt>href</xmlatt> attribute. Example of such
+          <xmlelement>xref</xmlelement> elements: <tt>&lt;xref
+          scope="external" format="java"
           href="src/Test.java"&gt;Test.java&lt;/xref&gt;</tt>.</p><dl
               compact="yes">
               <dlentry>
                 <dt><tt>''</tt></dt>
 
-                <dd>Do not resolve the <tt>href</tt> attribute. In this case,
-                the external resource files are expected to be copied
-                &#8220;by hand&#8221; to the output directory.</dd>
+                <dd>Do not resolve the <xmlatt>href</xmlatt> attribute. In
+                this case, the external resource files are expected to be
+                copied “by hand” to the output directory.</dd>
               </dlentry>
 
               <dlentry>
                 <dt>An URL ending with "<tt>/</tt>"</dt>
 
-                <dd>This URL is prepended to the value of the <tt>href</tt>
-                attribute.</dd>
+                <dd>This URL is prepended to the value of the
+                <xmlatt>href</xmlatt> attribute.</dd>
               </dlentry>
 
               <dlentry>
                 <dt><tt>'#REMOVE'</tt></dt>
 
-                <dd>The <tt>xref</tt> or <tt>link</tt> element is processed as
-                if it did not have an <tt>href</tt> attribute.</dd>
+                <dd>The <xmlelement>xref</xmlelement> or
+                <xmlelement>link</xmlelement> element is processed as if it
+                did not have an <xmlatt>href</xmlatt> attribute.</dd>
               </dlentry>
             </dl></stentry>
         </strow>
@@ -147,14 +154,14 @@
           <tt>'no'</tt>.</p><p>Default value: <tt>'yes'</tt>.</p></stentry>
 
           <stentry><p>Allows to turn off syntax highlighting in elements
-          specializing <tt>pre</tt>.<indexterm>syntax
+          specializing <xmlelement>pre</xmlelement>.<indexterm>syntax
           highlighting</indexterm></p><p>By default, syntax highlighting is
-          turned on for all elements specializing <tt>pre</tt> and having an
-          <tt>outputclass</tt> attribute equals to <tt>language-c</tt>,
-          <tt>language-cpp</tt>, <tt>language-csharp</tt>,
-          <tt>language-delphi</tt>, <tt>language-ini</tt>,
-          <tt>language-java</tt>, language-javascript, <tt>language-m2</tt>,
-          <tt>language-perl</tt>, <tt>language-php</tt>,
+          turned on for all elements specializing <xmlelement>pre</xmlelement>
+          and having an <xmlatt>outputclass</xmlatt> attribute equals to
+          <tt>language-c</tt>, <tt>language-cpp</tt>,
+          <tt>language-csharp</tt>, <tt>language-delphi</tt>,
+          <tt>language-ini</tt>, <tt>language-java</tt>, language-javascript,
+          <tt>language-m2</tt>, <tt>language-perl</tt>, <tt>language-php</tt>,
           <tt>language-python</tt>, <tt>language-ruby</tt>,
           <tt>language-tcl</tt>.<indexterm>outputclass,
           attribute</indexterm></p></stentry>
@@ -184,11 +191,13 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <tt>'number text'</tt>.</p></stentry>
 
           <stentry><p>This parameter specifies which text to generate for a
-          <tt>link</tt> element, when this <tt>link</tt> element has no
-          <tt>linktext</tt> child element or when this <tt>linktext</tt> child
-          element is empty.</p><p>Similar to above parameter <xref
-            href="#commonParameters/xref-auto-text">xref-auto-text</xref> but for
-          <tt>link</tt> elements.</p></stentry>
+          <xmlelement>link</xmlelement> element, when this
+          <xmlelement>link</xmlelement> element has no
+          <xmlelement>linktext</xmlelement> child element or when this
+          <xmlelement>linktext</xmlelement> child element is
+          empty.</p><p>Similar to above parameter <xref
+          href="#xsltParams/xref-auto-text">xref-auto-text</xref> but for
+          <xmlelement>link</xmlelement> elements.</p></stentry>
         </strow>
 
         <strow>
@@ -201,9 +210,10 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           fastpath important note notes remember restriction
           tip'</tt>.</p></stentry>
 
-          <stentry><p>Specifies the type (attribute <tt>type</tt>) of the
-          <tt>note</tt> elements for which icons should be used rather than
-          text in order to represent note labels.</p><p>Ignored unless
+          <stentry><p>Specifies the type (attribute <xmlatt>type</xmlatt>) of
+          the <xmlelement>note</xmlelement> elements for which icons should be
+          used rather than text in order to represent note
+          labels.</p><p>Ignored unless
           <tt>use-note-icon='yes'</tt>.</p></stentry>
         </strow>
 
@@ -213,16 +223,18 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
 
           <stentry><p>List of values separated by whitespace. Allowed values
           are: <tt>'topic'</tt>, <tt>'chapter-only'</tt>, <tt>'table'</tt>,
-          <tt>'fig'</tt>, <tt>'example'</tt>, <tt>'all'</tt>.</p><p>Default
-          value: <tt>''</tt> (number nothing).</p></stentry>
+          <tt>'fig'</tt>, <tt>'example'</tt>, <tt>'equation-figure'</tt>,
+          <tt>'all'</tt>.</p><p>Default value: <tt>''</tt> (number
+          nothing).</p></stentry>
 
           <stentry><p>Specifies which elements are to be numbered.
-          </p><p><tt>'all'</tt> is a short form for <tt>'topic table
-          fig'</tt>.</p><p><tt>'chapter-only'</tt> means: number topics, but
-          only those referenced in a bookmap as <tt>part</tt>,
-          <tt>chapter</tt> and <tt>appendix</tt>.</p><note type="note">Please
-          note that <tt>'all'</tt> does not include <tt>'example'</tt>. If you
-          want to number all formal elements including examples, then you must
+          </p><p><tt>'all'</tt> is a short form for <tt>'topic table fig
+          equation-figure'</tt>.</p><p><tt>'chapter-only'</tt> means: number
+          topics, but only those referenced in a bookmap as
+          <xmlelement>part</xmlelement>, <xmlelement>chapter</xmlelement> and
+          <xmlelement>appendix</xmlelement>.</p><note type="note">Please note
+          that <tt>'all'</tt> does not include <tt>'example'</tt>. If you want
+          to number all formal elements including examples, then you must
           specify <tt>'all example'</tt>.</note></stentry>
         </strow>
 
@@ -245,10 +257,10 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <stentry><p>String.</p><p>Default value: <tt>'-'</tt>.</p></stentry>
 
           <stentry><p>The string used to separate the hierarchical number of
-          figures, tables and examples.</p><p>When possible, the number of
-          figure, table or example is made relative to the number of the
-          ancestor chapter or appendix. This gives for example (for
-          descendants of chapter 5): <b>Figure 5-1.</b> <i>Title of first
+          figures, tables, examples and equations.</p><p>When possible, the
+          number of figure, table, example or equation is made relative to the
+          number of the ancestor chapter or appendix. This gives for example
+          (for descendants of chapter 5): <b>Figure 5-1.</b> <i>Title of first
           figure of chapter 5</i>, <b>Figure 5-2.</b> <i>Title of second
           figure of chapter 5</i>, etc.</p></stentry>
         </strow>
@@ -262,9 +274,9 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <tt>'no'</tt>.</p><p>Default value: <tt>'no'</tt>.</p></stentry>
 
           <stentry>Generates a "Required" (respectively "Optional") label for
-          <tt>step</tt> and <tt>substep</tt> elements having an
-          <tt>importance</tt> attribute set to "<tt>required</tt>" (resp.
-          "<tt>optional</tt>").</stentry>
+          <xmlelement>step</xmlelement> and <xmlelement>substep</xmlelement>
+          elements having an <xmlatt>importance</xmlatt> attribute set to
+          "<tt>required</tt>" (resp. "<tt>optional</tt>").</stentry>
         </strow>
 
         <strow>
@@ -284,16 +296,17 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
 
         <strow>
           <stentry
-            id="prepend-chapter-to-section-number"><tt>prepend-chapter-to-&#x200B;section-number</tt><indexterm>prepend-chapter-to-&#x200B;section-number,
+          id="prepend-chapter-to-section-number"><tt>prepend-chapter-to-section-number</tt><indexterm>prepend-chapter-to-section-number,
           parameter</indexterm></stentry>
 
           <stentry><p>Allowed values are: <tt>'yes'</tt> and
           <tt>'no'</tt>.</p><p>Default value: <tt>'no'</tt>.</p></stentry>
 
           <stentry><p>Normally topics which are descendants of chapters (that
-          is, topics referenced in a bookmap as <tt>chapter</tt>) are numbered
-          as follows: <b>1.</b> <i>Title of first section</i>, <b>1.1.</b>
-          <i>Title of first subsection</i>, etc.</p><p>Specifying
+          is, topics referenced in a bookmap as
+          <xmlelement>chapter</xmlelement>) are numbered as follows: <b>1.</b>
+          <i>Title of first section</i>, <b>1.1.</b> <i>Title of first
+          subsection</i>, etc.</p><p>Specifying
           <tt>prepend-chapter-to-section-number='yes'</tt> prepends the number
           of the chapter ancestor to the section number. This gives for
           example (for descendants of chapter 5): <b>5.1.</b> <i>Title of
@@ -301,20 +314,20 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           etc.</p></stentry>
         </strow>
 
-      <strow>
-        <stentry
+        <strow>
+          <stentry
           id="remedy-number-format"><tt>remedy-number-format</tt><indexterm>remedy-number-format,
-            parameter</indexterm></stentry>
-        
-        <stentry><p>Allowed values are: <tt>'I'</tt>, <tt>'i'</tt>,
+          parameter</indexterm></stentry>
+
+          <stentry><p>Allowed values are: <tt>'I'</tt>, <tt>'i'</tt>,
           <tt>'A'</tt>, <tt>'a'</tt>, <tt>'1'</tt>.</p><p>Default value:
-            <tt>'A'</tt>.</p></stentry>
-        
-        <stentry><p>In a <xmlelement>troubleshooting</xmlelement> topic,
+          <tt>'A'</tt>.</p></stentry>
+
+          <stentry><p>In a <xmlelement>troubleshooting</xmlelement> topic,
           multiple <xmlelement>remedy</xmlelement> elements having no title
           are given numbers formatted using this format.</p></stentry>
-      </strow>
-      
+        </strow>
+
         <strow>
           <stentry
           id="show-draft-comments"><tt>show-draft-comments</tt><indexterm>show-draft-comments,
@@ -323,35 +336,23 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <stentry><p>Allowed values are: <tt>'yes'</tt> and
           <tt>'no'</tt>.</p><p>Default value: <tt>'no'</tt>.</p></stentry>
 
-          <stentry><p>Specifies whether <tt>draft-comments</tt> elements
-          should be rendered.</p></stentry>
+          <stentry><p>Specifies whether
+          <xmlelement>draft-comments</xmlelement> elements should be
+          rendered.</p></stentry>
         </strow>
 
-      <strow>
-        <stentry
-          id="troubleSolution-number-format"><tt>troubleSolution-number-format</tt><indexterm>troubleSolution-number-format,
-            parameter</indexterm></stentry>
-        
-        <stentry><p>Allowed values are: <tt>'I'</tt>, <tt>'i'</tt>,
-          <tt>'A'</tt>, <tt>'a'</tt>, <tt>'1'</tt>.</p><p>Default value:
-            <tt>'1'</tt>.</p></stentry>
-        
-        <stentry><p>In a <xmlelement>troubleshooting</xmlelement> topic,
-          multiple <xmlelement>troubleSolution</xmlelement> elements having no
-          title are given numbers formatted using this format. </p></stentry>
-      </strow>
-      
         <strow>
           <stentry
-          id="text-file-encoding"><tt>text-file-encoding</tt><indexterm>text-file-encoding,
+          id="troubleSolution-number-format"><tt>troubleSolution-number-format</tt><indexterm>troubleSolution-number-format,
           parameter</indexterm></stentry>
 
-          <stentry><p>An encoding name such as UTF-8 or
-          ISO-8859-1.</p><p>Default value: <tt>''</tt>.</p></stentry>
+          <stentry><p>Allowed values are: <tt>'I'</tt>, <tt>'i'</tt>,
+          <tt>'A'</tt>, <tt>'a'</tt>, <tt>'1'</tt>.</p><p>Default value:
+          <tt>'1'</tt>.</p></stentry>
 
-          <stentry><p>Encoding of the text file referenced by
-          <tt>coderef</tt>/<tt>@href</tt>. An empty string means: to be
-          determined automatically.</p></stentry>
+          <stentry><p>In a <xmlelement>troubleshooting</xmlelement> topic,
+          multiple <xmlelement>troubleSolution</xmlelement> elements having no
+          title are given numbers formatted using this format. </p></stentry>
         </strow>
 
         <strow>
@@ -360,8 +361,8 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           parameter</indexterm></stentry>
 
           <stentry><p>List of element names separated by
-          whitespace.</p><p>Example: <tt>'fig table'</tt>.</p><p>Default
-          value: <tt>''</tt>.</p></stentry>
+          whitespace.</p><p>Example: <tt>'fig equation-figure
+          table'</tt>.</p><p>Default value: <tt>''</tt>.</p></stentry>
 
           <stentry><p>Specifies which elements should have their titles
           displayed after their bodies.</p></stentry>
@@ -405,15 +406,18 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
                     contained in the XHTML/HTML file being generated by the
                     XSLT stylesheet.<p>Do not add a <tt>&lt;!DOCTYPE&gt;</tt>
                     to such custom XHTML title page because otherwise, the
-                    XSLT stylesheet may fail loading it.</p><p>See <filepath>docs/samples/titlepage.xhtml</filepath> sample custom XHTML title
-                    page.</p></li>
+                    XSLT stylesheet may fail loading it.</p><p>See <xref
+                    format="xhtml" href="samples/titlepage.xhtml"
+                    scope="external">sample custom XHTML title
+                    page</xref>.</p></li>
 
                     <li>The child nodes of the first
                     <tt>fo:flow[@flow-name='xsl-region-body']</tt> element of
                     the custom XSL-FO title page are wrapped in a
                     <tt>fo:block</tt> contained the XSL-FO file being
-                      generated by the XSLT stylesheet.<p>See <filepath>docs/samples/titlepage.fo</filepath> sample custom
-                    XSL-FO title page.</p></li>
+                    generated by the XSLT stylesheet.<p>See <xref format="fo"
+                    href="samples/titlepage.fo" scope="external">sample custom
+                    XSL-FO title page</xref>.</p></li>
                   </ul></dd>
               </dlentry>
             </dl></stentry>
@@ -440,7 +444,7 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <tt>'no'</tt>.</p><p>Default value: <tt>'no'</tt>.</p></stentry>
 
           <stentry><p>Specifies whether icons should be used rather than text
-          in order to represent the label of a <tt>note</tt>
+          in order to represent the label of a <xmlelement>note</xmlelement>
           element.</p></stentry>
         </strow>
 
@@ -456,8 +460,19 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <stentry><p>Specifies an image file which is to be used as a
           watermark in all the pages comprising the output document. See also
           parameter <xref
-            href="fo_parameters.dita#foparameters/watermark"><tt>watermark</tt></xref>.</p><p>If you
-          need this feature when generating RTF, DOCX or ODT, please make sure to use
+          href="#xsltParams/watermark"><tt>watermark</tt></xref>.</p><p>If you
+          need this feature when generating RTF<indexterm>.rtf, filename
+          extension<index-sort-as>rtf</index-sort-as><index-see-also>RTF,
+          output format</index-see-also></indexterm>,
+          WordprocessingML<indexterm>.wml, filename
+          extension<index-sort-as>wml</index-sort-as><index-see-also>WordprocessingML,
+          output format</index-see-also></indexterm>, Office Open XML
+          (<tt>.docx</tt>)<indexterm>.docx, filename
+          extension<index-sort-as>docx</index-sort-as><index-see-also>Office
+          Open XML, output format</index-see-also></indexterm>, OpenDocument
+          (<tt>.odt</tt>)<indexterm>.odt, filename
+          extension<index-sort-as>odt</index-sort-as><index-see-also>OpenOffice,
+          output format</index-see-also></indexterm>, please make sure to use
           <xref format="html" href="http://www.xmlmind.com/foconverter/"
           scope="external">XMLmind XSL-FO Converter</xref>
           v5.3+<indexterm>XFC, XSL-FO processor</indexterm>.</p></stentry>
@@ -473,17 +488,19 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
           <tt>'number'</tt>.</p></stentry>
 
           <stentry><p>This parameter specifies which text to generate for an
-          <tt>xref</tt> element, when this <tt>xref</tt> element contains no
-          text at all<fn>This implies that the <tt>xref-auto-text</tt>
-          parameter is ignored when an <tt>xref</tt> element contains some
-          text.</fn>.</p><p>Let's suppose that an <tt>xref</tt> element
-          containing no text at all points to a topic titled
-          "<tt>Installation</tt>".</p><p>Because the <tt>xref</tt> element
-          points to an element having a <tt>title</tt> child element, ditac
-          may use this title as a starting point for the generated
-          text.</p><p>Now let's suppose that topics are numbered and that the
-          number of the "<tt>Installation</tt>" topic is "<tt>Chapter
-          5</tt>".</p><p>The text generated for this <tt>xref</tt> element is
+          <xmlelement>xref</xmlelement> element, when this
+          <xmlelement>xref</xmlelement> element contains no text at
+          all<fn>This implies that the <tt>xref-auto-text</tt> parameter is
+          ignored when an <xmlelement>xref</xmlelement> element contains some
+          text.</fn>.</p><p>Let's suppose that an
+          <xmlelement>xref</xmlelement> element containing no text at all
+          points to a topic titled "<tt>Installation</tt>".</p><p>Because the
+          <xmlelement>xref</xmlelement> element points to an element having a
+          <xmlelement>title</xmlelement> child element, ditac may use this
+          title as a starting point for the generated text.</p><p>Now let's
+          suppose that topics are numbered and that the number of the
+          "<tt>Installation</tt>" topic is "<tt>Chapter 5</tt>".</p><p>The
+          text generated for this <xmlelement>xref</xmlelement> element is
           thus:</p><dl>
               <dlentry>
                 <dt>If <tt>xref-auto-text='number'</tt></dt>
@@ -510,7 +527,7 @@ Cat 54, 87&lt;--&gt;90</pre></stentry>
 
         <strow>
           <stentry id="xsl-resources-directory"><image alt="Pseudo parameter"
-          href="../images/pseudoParam.png"/><tt>xsl-resources-&#x200B;directory</tt><indexterm>xsl-resources-directory,
+          href="../images/pseudoParam.png"/><tt>xsl-resources-directory</tt><indexterm>xsl-resources-directory,
           parameter</indexterm></stentry>
 
           <stentry><p>URL. A relative URL is relative to the output
