--- a/docs/conversa.ditamap
+++ b/docs/conversa.ditamap
@@ -53,7 +53,7 @@
             </topicref>
         </topicref>
     </chapter>
-    
+    <chapter href="concepts/credits.dita"></chapter>
     <backmatter>
         <booklists>
             <indexlist/>
